<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_id">1374376002884276</string>
    <string name="app_name">MobiquityChallenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_record_sound">RecordSound</string>
    <string name="title_activity_create_text_notes">CreateTextNotes</string>
    <string name="service_not_available">Sorry! Service not available</string>
	<string name="invalid_lat_long_used">Invalid Latitude Longitude used</string>
	<string name="no_address_found">No Address Found</string>
	<string name="address_found">Address Found</string>
	<string name="no_geocoder_available">No Geocoder available</string>
	<string name="create_text_note">Create Text Note : </string>
	<string name="authenticate_dropbox">Authenticate Dropbox</string>
	<string name="take_photo">Take Photo</string>
	<string name="view_photos">View Photos</string>
	<string name="record_sound">Record Sound</string>
	<string name="create_note">Create Text Notes</string>
	<string name="select_to_apply">Please select text to apply effect</string>
	<string name="bold">B</string>
	<string name="italic">I</string>
	<string name="underline">U</string>
	<string name="strike">Strike</string>
	<string name="upload_to_dropbox">Upload to Dropbox</string>
    
</resources>
