<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.mobiquitychallenge.CreateTextNotes" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_text_note"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.commonsware.cwac.richedit.RichEditText
            android:id="@+id/txtNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:lines="10" >

            <requestFocus />
        </com.commonsware.cwac.richedit.RichEditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_to_apply" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bold" />

        <Button
            android:id="@+id/btnItalic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/italic" />

        <Button
            android:id="@+id/btnUnderline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/underline" />

        <Button
            android:id="@+id/btnStrike"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strike" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_to_dropbox" />

</LinearLayout>