<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.mobiquitychallenge.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAuthenticate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/authenticate_dropbox" />

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/take_photo"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnViewPhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_photos"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnRecordSound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_sound"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCreateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_note"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/listPhotos"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:visibility="gone" />

</LinearLayout>